--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/ion22666/GivazyChat#readme",
   "devDependencies": {
-    "next": "^13.1.6"
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "next": "^13.1.6",
+    "typescript": "4.9.5"
   }
 }
