--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "givazychat",
-  "version": "1.0.0",
-  "description": "The GivazyChat App",
-  "main": "index.js",
-  "scripts": {
-    "test": "test",
-    "dev": "next dev"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ion22666/GivazyChat.git"
-  },
-  "keywords": [
-    "givazy"
-  ],
-  "author": "Giovanni, Valy and Zyppon",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ion22666/GivazyChat/issues"
-  },
-  "homepage": "https://github.com/ion22666/GivazyChat#readme",
-  "devDependencies": {
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "next": "^13.1.6",
-    "typescript": "4.9.5"
-  }
+    "name": "givazychat",
+    "version": "1.0.0",
+    "description": "The GivazyChat App",
+    "main": "index.js",
+    "scripts": {
+        "test": "test",
+        "dev": "next dev"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ion22666/GivazyChat.git"
+    },
+    "keywords": [
+        "givazy"
+    ],
+    "author": "Giovanni, Valy and Zyppon",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ion22666/GivazyChat/issues"
+    },
+    "homepage": "https://github.com/ion22666/GivazyChat#readme",
+    "devDependencies": {
+        "@types/node": "18.13.0",
+        "@types/react": "18.0.28",
+        "autoprefixer": "^10.4.13",
+        "next": "^13.1.6",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.6",
+        "typescript": "4.9.5"
+    }
 }
