--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.6",
         "typescript": "4.9.5"
+    },
+    "dependencies": {
+        "mongoose": "^6.9.2"
     }
 }
