--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "npx jest --config ./__tests__/.config/jest.config.js",
         "dev": "node server.js",
         "start": "NODE_ENV=production node server.js",
-        "build": "next build"
+        "build": "next build",
+        "rollup": "npx rollup -c rollup.config.js -w"
     },
     "repository": {
         "type": "git",
@@ -23,6 +24,8 @@
     },
     "homepage": "https://github.com/ion22666/GivazyChat#readme",
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@rollup/plugin-typescript": "^11.0.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/node": "18.13.0",
@@ -32,11 +35,17 @@
         "jest": "^29.4.3",
         "jest-environment-jsdom": "^29.4.3",
         "next": "^13.1.6",
+        "nodemon": "^2.0.20",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.6",
         "typescript": "4.9.5"
     },
     "dependencies": {
-        "mongoose": "^6.9.2"
-    }
+        "dotenv": "^16.0.3",
+        "mongoose": "^6.9.2",
+        "redis": "^4.6.5",
+        "socket.io": "^4.6.1",
+        "socket.io-client": "^4.6.1"
+    },
+    "type": "module"
 }
