--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "npx jest --config ./__tests__/.config/jest.config.js",
-        "dev": "node server.js",
-        "start": "NODE_ENV=production node server.js",
+        "dev": "npx nodemon main.js",
+        "start": "NODE_ENV=production node main.js",
         "build": "next build",
         "rollup": "npx rollup -c rollup.config.js -w"
     },
