--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "npx jest --config ./__tests__/.config/jest.config.js",
         "dev": "npx nodemon main.js",
+        "dev-api": "set API_ONLY=true && npx nodemon main.js",
         "start": "NODE_ENV=production node main.js",
         "build": "next build",
         "rollup": "npx rollup -c rollup.config.js -w"
@@ -28,9 +29,13 @@
         "@rollup/plugin-typescript": "^11.0.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "18.13.0",
         "@types/react": "18.0.28",
         "autoprefixer": "^10.4.13",
+        "chalk": "^5.2.0",
         "cypress": "^12.6.0",
         "jest": "^29.4.3",
         "jest-environment-jsdom": "^29.4.3",
@@ -41,7 +46,11 @@
         "typescript": "4.9.5"
     },
     "dependencies": {
+        "axios": "^1.3.4",
+        "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.9.2",
         "redis": "^4.6.5",
         "socket.io": "^4.6.1",
