--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "next": "^13.1.6",
         "nodemon": "^2.0.20",
         "postcss": "^8.4.21",
+        "prettier": "^2.8.4",
+        "prettier-plugin-tailwindcss": "^0.2.4",
         "tailwindcss": "^3.2.6",
         "typescript": "4.9.5"
     },
