--- a/package.json
+++ b/package.json
@@ -48,16 +48,17 @@
         "typescript": "4.9.5"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.3",
         "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.9.2",
+        "react-redux": "^8.0.5",
         "redis": "^4.6.5",
         "socket.io": "^4.6.1",
         "socket.io-client": "^4.6.1"
-        
     },
     "type": "module"
 }
