--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dev-api": "set API_ONLY=true && npx nodemon main.js",
         "start": "NODE_ENV=production node main.js",
         "build": "next build",
-        "rollup": "npx rollup -c rollup.config.js -w"
+        "rollup": "npx rollup -c rollup.config.js -w",
+        "clean-database": "node dropDatabase.js"
     },
     "repository": {
         "type": "git",
@@ -34,6 +35,7 @@
         "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "18.13.0",
         "@types/react": "18.0.28",
+        "@types/redux-logger": "^3.0.9",
         "autoprefixer": "^10.4.13",
         "chalk": "^5.2.0",
         "cypress": "^12.6.0",
@@ -57,6 +59,7 @@
         "mongoose": "^6.9.2",
         "react-redux": "^8.0.5",
         "redis": "^4.6.5",
+        "redux-logger": "^3.0.6",
         "socket.io": "^4.6.1",
         "socket.io-client": "^4.6.1"
     },
