--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
         "typescript": "4.9.5"
     },
     "dependencies": {
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
         "@reduxjs/toolkit": "^1.9.3",
         "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
+        "emoji-mart": "^5.5.2",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.9.2",
