--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.9.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "redis": "^4.6.5",
         "redux-logger": "^3.0.6",
